all-in-one-new.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-new
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-new
  namespace: jenkins-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-new
  template:
    metadata:
      labels:
        app: jenkins-new
    spec:
      serviceAccountName: jenkins-new
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-alpine
        ports:
        - containerPort: 8080
        - containerPort: 50000
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 0.5
            memory: 500Mi
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-new
  namespace: jenkins-new
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32000
  selector:
    app: jenkins-new

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp-new
  namespace: jenkins-new
spec:
  type: ClusterIP
  ports:
  - port: 50000
    targetPort: 50000
  selector:
    app: jenkins-new
